--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,100 @@
-# Logs
-logs
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# Testing
+coverage/
+.nyc_output/
+
+# Next.js
+.next/
+out/
+build/
+dist/
+dist-ssr/
+.vercel
+
+# Production
 *.log
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment variables
+.env
+.env*.local
+.env.docker
+.env.production
+.env.development
+.env.test
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
+*.sublime-project
+*.sublime-workspace
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Environment variables
-.env
-.env.local
-.env.production
+# Docker
+*.bak
+docker-compose.override.yml
 
+# Supabase
+.supabase/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.turbo/
+
+# Debug
+.vscode/launch.json
+.vscode/tasks.json
+
+# Misc
+*.local
+.parcel-cache
+.eslintcache
+.stylelintcache
+
+# Old Vite files (migrated to Next.js)
+src/
+index.html
+vite.config.ts
+tsconfig.node.json
+
+# Backup files
+*.bak
+
+# Database setup temp files
+.schema-temp.sql
